--- a/index.html
+++ b/index.html
@@ -58,30 +58,30 @@
         const X = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>);
         const Save = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13 7 13 7 21"></polyline><polyline points="7 3 7 8 15 8"></polyline></svg>);
 
-        // Logo component
-        const ProxBalanceLogo = ({ size = 32 }) => (
-<svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-  <defs>
-    <filter id="glow">
-      <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
-      <feMerge>
-        <feMergeNode in="coloredBlur"/>
-        <feMergeNode in="SourceGraphic"/>
-      </feMerge>
-    </filter>
-  </defs>
-  <rect width="64" height="64" rx="12" fill="#0f172a"/>
-  <circle cx="32" cy="32" r="8" fill="#f97316" opacity="0.3"/>
-  <circle cx="32" cy="32" r="5" fill="#f97316" filter="url(#glow)"/>
-  <rect x="20" y="18" width="10" height="10" rx="2" fill="#06b6d4" opacity="0.2"/>
-  <rect x="20" y="18" width="10" height="10" rx="2" fill="none" stroke="#06b6d4" stroke-width="2" filter="url(#glow)"/>
-  <rect x="34" y="20" width="10" height="10" rx="2" fill="#10b981" opacity="0.2"/>
-  <rect x="34" y="20" width="10" height="10" rx="2" fill="none" stroke="#10b981" stroke-width="2" filter="url(#glow)"/>
-  <line x1="25" y1="28" x2="25" y2="30" stroke="#06b6d4" stroke-width="2" filter="url(#glow)"/>
-  <line x1="39" y1="30" x2="39" y2="32" stroke="#10b981" stroke-width="2" filter="url(#glow)"/>
-  <rect x="16" y="30" width="32" height="2" fill="#f97316" opacity="0.5" filter="url(#glow)"/>
-</svg>
-        );
+// Logo component
+const ProxBalanceLogo = ({ size = 32 }) => (
+  <svg width={size} height={size} viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+    <defs>
+      <filter id="logo-glow">
+        <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
+        <feMerge>
+          <feMergeNode in="coloredBlur"/>
+          <feMergeNode in="SourceGraphic"/>
+        </feMerge>
+      </filter>
+    </defs>
+    <rect width="64" height="64" rx="12" fill="#0f172a"/>
+    <circle cx="32" cy="32" r="8" fill="#f97316" opacity="0.3"/>
+    <circle cx="32" cy="32" r="5" fill="#f97316" filter="url(#logo-glow)"/>
+    <rect x="20" y="18" width="10" height="10" rx="2" fill="#06b6d4" opacity="0.2"/>
+    <rect x="20" y="18" width="10" height="10" rx="2" fill="none" stroke="#06b6d4" strokeWidth="2" filter="url(#logo-glow)"/>
+    <rect x="34" y="20" width="10" height="10" rx="2" fill="#10b981" opacity="0.2"/>
+    <rect x="34" y="20" width="10" height="10" rx="2" fill="none" stroke="#10b981" strokeWidth="2" filter="url(#logo-glow)"/>
+    <line x1="25" y1="28" x2="25" y2="30" stroke="#06b6d4" strokeWidth="2" filter="url(#logo-glow)"/>
+    <line x1="39" y1="30" x2="39" y2="32" stroke="#10b981" strokeWidth="2" filter="url(#logo-glow)"/>
+    <rect x="16" y="30" width="32" height="2" fill="#f97316" opacity="0.5" filter="url(#logo-glow)"/>
+  </svg>
+);
 
         const API_BASE = `/api`;
 
