--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
         </feMerge>
       </filter>
     </defs>
-    <rect width="64" height="64" rx="12" fill="#0f172a"/>
+    ✅ (dark background rect removed - now transparent)
     <circle cx="32" cy="32" r="8" fill="#f97316" opacity="0.3"/>
     <circle cx="32" cy="32" r="5" fill="#f97316" filter="url(#logo-glow)"/>
     <rect x="20" y="18" width="10" height="10" rx="2" fill="#06b6d4" opacity="0.2"/>
