Update to latest Claude 4.5 model names
- Update app.py to return current Claude models (Sonnet 4.5, Haiku 4.5, etc.)
- Update index.html with correct model examples and documentation link
- Fix outdated model references (claude-3-5-sonnet-20241022 -> claude-sonnet-4-5-20250929)

--- a/index.html
+++ b/index.html
@@ -1846,14 +1846,14 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                 type="text"
                                 value={anthropicModel}
                                 onChange={(e) => setAnthropicModel(e.target.value)}
-                                placeholder="claude-3-5-sonnet-20241022"
+                                placeholder="claude-sonnet-4-5-20250929"
                                 className="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded bg-white dark:bg-gray-700 text-gray-900 dark:text-white font-mono text-sm"
                               />
                               <p className="text-xs text-gray-500 dark:text-gray-400 mt-1">
-                                <a href="https://docs.anthropic.com/en/docs/about-claude/models" target="_blank" rel="noopener noreferrer" className="text-blue-600 dark:text-blue-400 hover:underline">
+                                <a href="https://docs.claude.com/en/docs/about-claude/models" target="_blank" rel="noopener noreferrer" className="text-blue-600 dark:text-blue-400 hover:underline">
                                   View available models
                                 </a>
-                                {' '}- Common: claude-3-5-sonnet-20241022, claude-3-5-haiku-20241022, claude-3-opus-20240229
+                                {' '}- Current: claude-sonnet-4-5-20250929, claude-haiku-4-5-20251001
                               </p>
                             </div>
                           </div>
