--- a/index.html
+++ b/index.html
@@ -1524,6 +1524,30 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                         </div>
                       </div>
 
+                      {systemInfo.changelog && systemInfo.changelog.length > 0 && (
+                        <div className="bg-green-50 dark:bg-green-900/30 border border-green-200 dark:border-green-800 rounded p-4">
+                          <h3 className="font-semibold text-green-900 dark:text-green-200 mb-3 flex items-center gap-2">
+                            <span>📋 What's New</span>
+                            <span className="text-xs px-2 py-0.5 bg-green-200 dark:bg-green-800 rounded-full">
+                              {systemInfo.changelog.length} update{systemInfo.changelog.length > 1 ? 's' : ''}
+                            </span>
+                          </h3>
+                          <div className="space-y-2 max-h-48 overflow-y-auto">
+                            {systemInfo.changelog.map((item, idx) => (
+                              <div key={idx} className="flex items-start gap-2 text-sm">
+                                <span className="text-green-600 dark:text-green-400 flex-shrink-0">●</span>
+                                <div className="flex-1">
+                                  <span className="text-green-900 dark:text-green-100">{item.message}</span>
+                                  <span className="ml-2 text-xs font-mono text-green-600 dark:text-green-400">
+                                    ({item.commit})
+                                  </span>
+                                </div>
+                              </div>
+                            ))}
+                          </div>
+                        </div>
+                      )}
+
                       <div className="bg-yellow-50 dark:bg-yellow-900/30 border border-yellow-200 dark:border-yellow-800 rounded p-4">
                         <div className="flex items-start gap-2">
                           <AlertTriangle size={20} className="text-yellow-600 dark:text-yellow-400 flex-shrink-0 mt-0.5" />
