Fix canvas not found errors when node status is collapsed
Added check to skip chart initialization when the node status section
is collapsed. The canvas elements are not rendered in the collapsed view,
so attempting to initialize charts throws "Canvas not found" errors.

This eliminates console errors while maintaining proper chart rendering
when the section is expanded.

--- a/index.html
+++ b/index.html
@@ -551,6 +551,8 @@ const ProxBalanceLogo = ({ size = 32 }) => (
           // Render charts when data changes or chart period changes
           useEffect(() => {
             if (!data || !data.nodes) return;
+            // Skip chart initialization when node status section is collapsed
+            if (collapsedSections.nodeStatus) return;
             if (typeof Chart === 'undefined') {
               console.error('Chart.js is not loaded');
               return;
