--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         const ChevronDown = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><polyline points="6 9 12 15 18 9"></polyline></svg>);
         const ChevronUp = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><polyline points="18 15 12 9 6 15"></polyline></svg>);
         const GitHub = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="currentColor" className={className}><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>);
+        const GitBranch = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><line x1="6" y1="3" x2="6" y2="15"></line><circle cx="18" cy="6" r="3"></circle><circle cx="6" cy="18" r="3"></circle><path d="M18 9a9 9 0 0 1-9 9"></path></svg>);
 
 // Logo component
 const ProxBalanceLogo = ({ size = 32 }) => (
@@ -136,6 +137,10 @@ const ProxBalanceLogo = ({ size = 32 }) => (
           const [aiAnalysisPeriod, setAiAnalysisPeriod] = useState('24h');
           const [proxmoxTokenId, setProxmoxTokenId] = useState('');
           const [proxmoxTokenSecret, setProxmoxTokenSecret] = useState('');
+          const [showBranchModal, setShowBranchModal] = useState(false);
+          const [availableBranches, setAvailableBranches] = useState([]);
+          const [loadingBranches, setLoadingBranches] = useState(false);
+          const [switchingBranch, setSwitchingBranch] = useState(false);
 
           // Node grid layout state with localStorage persistence
           const [nodeGridColumns, setNodeGridColumns] = useState(() => {
@@ -447,6 +452,46 @@ const ProxBalanceLogo = ({ size = 32 }) => (
             }
 
             setUpdating(false);
+          };
+
+          const fetchBranches = async () => {
+            setLoadingBranches(true);
+            try {
+              const response = await fetch(`${API_BASE}/system/branches`);
+              const result = await response.json();
+              if (result.success) {
+                setAvailableBranches(result.branches || []);
+              } else {
+                console.error('Failed to fetch branches:', result.error);
+              }
+            } catch (err) {
+              console.error('Error fetching branches:', err);
+            }
+            setLoadingBranches(false);
+          };
+
+          const switchBranch = async (branchName) => {
+            setSwitchingBranch(true);
+            try {
+              const response = await fetch(`${API_BASE}/system/switch-branch`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ branch: branchName })
+              });
+              const result = await response.json();
+
+              if (result.success) {
+                setShowBranchModal(false);
+                await fetchSystemInfo();
+                alert(`Successfully switched to branch: ${branchName}\n\nThe page will reload to apply changes.`);
+                setTimeout(() => window.location.reload(), 1000);
+              } else {
+                alert(`Failed to switch branch: ${result.error}`);
+              }
+            } catch (err) {
+              alert(`Error switching branch: ${err.message}`);
+            }
+            setSwitchingBranch(false);
           };
 
           const executeMigration = async (rec) => {
@@ -776,7 +821,11 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                         {systemInfo && (
                           <div className="flex items-center gap-2 mt-1">
                             <span className="text-xs text-gray-500 dark:text-gray-500">
-                              Branch: <span className="font-mono text-purple-600 dark:text-purple-400">{systemInfo.branch}</span>
+                              Branch: <button
+                                onClick={() => { fetchBranches(); setShowBranchModal(true); }}
+                                className="font-mono text-purple-600 dark:text-purple-400 hover:text-purple-700 dark:hover:text-purple-300 underline decoration-dotted cursor-pointer"
+                                title="Click to switch branch"
+                              >{systemInfo.branch}</button>
                             </span>
                             <span className="text-xs text-gray-400 dark:text-gray-600">|</span>
                             <span className="text-xs text-gray-500 dark:text-gray-500">
@@ -1618,6 +1667,112 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                       )}
                     </div>
                   )}
+                </div>
+              </div>
+            )}
+
+            {showBranchModal && (
+              <div className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4">
+                <div className="bg-white dark:bg-gray-800 rounded-lg shadow-xl max-w-2xl w-full max-h-[80vh] overflow-y-auto">
+                  <div className="p-6">
+                    <div className="flex items-center justify-between mb-6">
+                      <div className="flex items-center gap-2">
+                        <GitBranch size={24} className="text-purple-600 dark:text-purple-400" />
+                        <h2 className="text-xl font-bold text-gray-900 dark:text-white">Switch Branch</h2>
+                      </div>
+                      <button
+                        onClick={() => setShowBranchModal(false)}
+                        className="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200"
+                      >
+                        <X size={24} />
+                      </button>
+                    </div>
+
+                    {loadingBranches ? (
+                      <div className="flex items-center justify-center py-8">
+                        <RefreshCw size={24} className="animate-spin text-blue-600 dark:text-blue-400" />
+                        <span className="ml-2 text-gray-600 dark:text-gray-400">Loading branches...</span>
+                      </div>
+                    ) : (
+                      <div className="space-y-4">
+                        <div className="bg-blue-50 dark:bg-blue-900/30 border border-blue-200 dark:border-blue-800 rounded p-4">
+                          <div className="flex items-start gap-2">
+                            <AlertTriangle size={20} className="text-blue-600 dark:text-blue-400 flex-shrink-0 mt-0.5" />
+                            <div className="text-sm text-blue-800 dark:text-blue-300">
+                              <p className="font-semibold mb-1">Switching branches will:</p>
+                              <ul className="list-disc ml-4 space-y-1">
+                                <li>Pull the latest code from the selected branch</li>
+                                <li>Update dependencies if needed</li>
+                                <li>Restart ProxBalance services</li>
+                                <li>Reload the page automatically</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div className="space-y-2">
+                          <h3 className="font-semibold text-gray-900 dark:text-white mb-3">Available Branches</h3>
+                          {availableBranches.length === 0 ? (
+                            <p className="text-gray-600 dark:text-gray-400 text-sm">No branches found</p>
+                          ) : (
+                            availableBranches.map((branch) => (
+                              <div
+                                key={branch.name}
+                                className={`border rounded-lg p-4 ${
+                                  branch.current
+                                    ? 'border-purple-500 dark:border-purple-600 bg-purple-50 dark:bg-purple-900/20'
+                                    : 'border-gray-200 dark:border-gray-700 hover:border-purple-300 dark:hover:border-purple-700'
+                                }`}
+                              >
+                                <div className="flex items-center justify-between">
+                                  <div className="flex-1">
+                                    <div className="flex items-center gap-2">
+                                      <GitBranch size={16} className={branch.current ? 'text-purple-600 dark:text-purple-400' : 'text-gray-500 dark:text-gray-400'} />
+                                      <span className={`font-mono font-semibold ${
+                                        branch.current
+                                          ? 'text-purple-700 dark:text-purple-300'
+                                          : 'text-gray-900 dark:text-white'
+                                      }`}>
+                                        {branch.name}
+                                      </span>
+                                      {branch.current && (
+                                        <span className="px-2 py-0.5 bg-purple-600 dark:bg-purple-500 text-white text-xs rounded-full">
+                                          Current
+                                        </span>
+                                      )}
+                                    </div>
+                                    {branch.last_commit && (
+                                      <p className="text-xs text-gray-600 dark:text-gray-400 mt-1 ml-6">
+                                        Latest: {branch.last_commit.substring(0, 50)}{branch.last_commit.length > 50 ? '...' : ''}
+                                      </p>
+                                    )}
+                                  </div>
+                                  {!branch.current && (
+                                    <button
+                                      onClick={() => switchBranch(branch.name)}
+                                      disabled={switchingBranch}
+                                      className="ml-4 px-4 py-2 bg-purple-600 dark:bg-purple-500 text-white rounded hover:bg-purple-700 dark:hover:bg-purple-600 disabled:opacity-50 disabled:cursor-not-allowed"
+                                    >
+                                      {switchingBranch ? 'Switching...' : 'Switch'}
+                                    </button>
+                                  )}
+                                </div>
+                              </div>
+                            ))
+                          )}
+                        </div>
+
+                        <div className="flex justify-end pt-4">
+                          <button
+                            onClick={() => setShowBranchModal(false)}
+                            className="px-4 py-2 border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 rounded hover:bg-gray-100 dark:hover:bg-gray-700"
+                          >
+                            Close
+                          </button>
+                        </div>
+                      </div>
+                    )}
+                  </div>
                 </div>
               </div>
             )}
