--- a/index.html
+++ b/index.html
@@ -647,6 +647,20 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                 return;
               }
 
+              // Reduce data points for longer periods to improve performance and readability
+              // Sample rate increases with period: 1h=1 (all), 6h=10, 12h=20, 24h=40
+              const sampleRate = {
+                '1h': 1,
+                '6h': 10,
+                '12h': 20,
+                '24h': 40
+              }[chartPeriod] || 1;
+
+              // Always keep first and last points for accurate range display
+              const sampledData = filteredData.filter((point, index, arr) =>
+                index === 0 || index === arr.length - 1 || index % sampleRate === 0
+              );
+
               const ctx = canvas.getContext('2d');
               const isDark = darkMode;
 
@@ -654,14 +668,14 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                 newCharts[node.name] = new Chart(ctx, {
                 type: 'line',
                 data: {
-                  labels: filteredData.map(point => {
+                  labels: sampledData.map(point => {
                     const date = new Date(point.time * 1000);
                     return date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
                   }),
                   datasets: [
                     {
                       label: 'CPU %',
-                      data: filteredData.map(point => point.cpu),
+                      data: sampledData.map(point => point.cpu),
                       borderColor: 'rgb(59, 130, 246)',
                       backgroundColor: 'rgba(59, 130, 246, 0.1)',
                       tension: 0.4,
@@ -669,7 +683,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                     },
                     {
                       label: 'Memory %',
-                      data: filteredData.map(point => point.mem),
+                      data: sampledData.map(point => point.mem),
                       borderColor: 'rgb(16, 185, 129)',
                       backgroundColor: 'rgba(16, 185, 129, 0.1)',
                       tension: 0.4,
@@ -706,14 +720,14 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                           type: 'line',
                           yMin: cpuThreshold,
                           yMax: cpuThreshold,
-                          borderColor: 'rgba(239, 68, 68, 0.8)',
+                          borderColor: 'rgba(239, 68, 68, 0.3)',
                           borderWidth: 2,
                           borderDash: [5, 5],
                           label: {
                             display: true,
                             content: `CPU Threshold: ${cpuThreshold}%`,
                             position: 'end',
-                            backgroundColor: 'rgba(239, 68, 68, 0.9)',
+                            backgroundColor: 'rgba(239, 68, 68, 0.6)',
                             color: '#ffffff',
                             font: { size: 10 },
                             padding: 4
@@ -723,14 +737,14 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                           type: 'line',
                           yMin: memThreshold,
                           yMax: memThreshold,
-                          borderColor: 'rgba(249, 115, 22, 0.8)',
+                          borderColor: 'rgba(249, 115, 22, 0.3)',
                           borderWidth: 2,
                           borderDash: [5, 5],
                           label: {
                             display: true,
                             content: `Mem Threshold: ${memThreshold}%`,
                             position: 'start',
-                            backgroundColor: 'rgba(249, 115, 22, 0.9)',
+                            backgroundColor: 'rgba(249, 115, 22, 0.6)',
                             color: '#ffffff',
                             font: { size: 10 },
                             padding: 4
