--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
         const GitHub = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="currentColor" className={className}><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>);
         const GitBranch = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><line x1="6" y1="3" x2="6" y2="15"></line><circle cx="18" cy="6" r="3"></circle><circle cx="6" cy="18" r="3"></circle><path d="M18 9a9 9 0 0 1-9 9"></path></svg>);
         const ArrowLeft = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>);
+        const Lock = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>);
         const Download = ({ size, className }) => (<svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className={className}><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>);
 
 // Logo component
 const ProxBalanceLogo = ({ size = 32 }) => (
-  <img src="/assets/logo_icon.svg?v=2" alt="ProxBalance Logo" width={size} height={size} />
+  <img src="/assets/logo_icon_v2.svg?v=2" alt="ProxBalance Logo" width={size} height={size} />
 );
 
         const API_BASE = `/api`;
@@ -97,6 +98,8 @@ const ProxBalanceLogo = ({ size = 32 }) => (
           const [tempBackendInterval, setTempBackendInterval] = useState(60);
           const [tempUiInterval, setTempUiInterval] = useState(60);
           const [savingSettings, setSavingSettings] = useState(false);
+          const [canMigrate, setCanMigrate] = useState(true); // Permission check
+          const [permissionReason, setPermissionReason] = useState('');
           const [aiProvider, setAiProvider] = useState('none');
           const [aiEnabled, setAiEnabled] = useState(false);
           const [openaiKey, setOpenaiKey] = useState('');
@@ -156,6 +159,11 @@ const ProxBalanceLogo = ({ size = 32 }) => (
             return saved || 'usage';
           });
 
+          // Migration dialog state
+          const [selectedGuest, setSelectedGuest] = useState(null);
+          const [showMigrationDialog, setShowMigrationDialog] = useState(false);
+          const [migrationTarget, setMigrationTarget] = useState('');
+
           // Save collapsed state to localStorage whenever it changes
           useEffect(() => {
             localStorage.setItem('collapsedSections', JSON.stringify(collapsedSections));
@@ -182,7 +190,23 @@ const ProxBalanceLogo = ({ size = 32 }) => (
             document.documentElement.classList.add('dark');
             fetchConfig();
             fetchSystemInfo();
+            checkPermissions();
           }, []);
+
+          const checkPermissions = async () => {
+            try {
+              const response = await fetch(`${API_BASE}/permissions`);
+              const result = await response.json();
+              if (result.success) {
+                setCanMigrate(result.can_migrate);
+                setPermissionReason(result.reason || '');
+              }
+            } catch (err) {
+              console.error('Permission check failed:', err);
+              // Default to allowing migrations if check fails
+              setCanMigrate(true);
+            }
+          };
 
           const fetchConfig = async () => {
             try {
@@ -1151,11 +1175,11 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                             type="text"
                             value={proxmoxTokenId}
                             onChange={(e) => setProxmoxTokenId(e.target.value)}
-                            placeholder="root@pam!proxbalance"
+                            placeholder="proxbalance@pam!proxbalance"
                             className="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded bg-white dark:bg-gray-700 text-gray-900 dark:text-white font-mono text-sm"
                           />
                           <p className="text-xs text-gray-500 dark:text-gray-400 mt-1">
-                            Format: user@realm!tokenname (e.g., root@pam!proxbalance)
+                            Format: user@realm!tokenname (e.g., proxbalance@pam!proxbalance)
                           </p>
                         </div>
                         <div>
@@ -1780,8 +1804,15 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                     return (
                                       <div key={guest.vmid} className="relative group">
                                         <div
-                                          className={`rounded-full ${getGuestColor()} flex items-center justify-center text-white font-bold shadow-lg hover:shadow-xl transition-all cursor-pointer`}
+                                          className={`rounded-full ${getGuestColor()} flex items-center justify-center text-white font-bold shadow-lg hover:shadow-xl transition-all cursor-pointer ${canMigrate ? 'hover:ring-2 hover:ring-blue-400' : ''}`}
                                           style={{width: `${size}px`, height: `${size}px`, fontSize: `${Math.max(10, size/4)}px`}}
+                                          onClick={() => {
+                                            if (canMigrate) {
+                                              setSelectedGuest({...guest, currentNode: node.name});
+                                              setMigrationTarget('');
+                                              setShowMigrationDialog(true);
+                                            }
+                                          }}
                                         >
                                           {guest.vmid}
                                         </div>
@@ -1983,9 +2014,23 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                         </button>
                       </div>
                       {recommendations.length > 0 && (
-                        <button onClick={executeBatchMigration} disabled={loading} className="flex items-center gap-2 px-4 py-2 bg-green-600 dark:bg-green-500 text-white rounded hover:bg-green-700 dark:hover:bg-green-600 disabled:bg-gray-400">
-                          <Play size={18} />
-                          Migrate All ({recommendations.length})
+                        <button
+                          onClick={executeBatchMigration}
+                          disabled={!canMigrate || loading}
+                          className="flex items-center gap-2 px-4 py-2 bg-green-600 dark:bg-green-500 text-white rounded hover:bg-green-700 dark:hover:bg-green-600 disabled:bg-gray-400 disabled:cursor-not-allowed"
+                          title={!canMigrate ? 'Read-only API token (PVEAuditor) - Cannot perform migrations' : ''}
+                        >
+                          {!canMigrate ? (
+                            <>
+                              <Lock size={18} />
+                              Read-Only Mode
+                            </>
+                          ) : (
+                            <>
+                              <Play size={18} />
+                              Migrate All ({recommendations.length})
+                            </>
+                          )}
                         </button>
                       )}
                     </div>
@@ -2033,12 +2078,18 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                 </div>
                                 <div className="text-xs font-mono bg-gray-100 dark:bg-gray-900 p-1 rounded mt-1 text-gray-700 dark:text-gray-300">{rec.command}</div>
                               </div>
-                              <button 
-                                onClick={() => executeMigration(rec)} 
-                                disabled={status === 'running' || status === 'success'}
-                                className="ml-4 px-4 py-2 bg-blue-600 dark:bg-blue-500 text-white rounded hover:bg-blue-700 dark:hover:bg-blue-600 disabled:bg-gray-400 flex items-center gap-2 shrink-0"
+                              <button
+                                onClick={() => executeMigration(rec)}
+                                disabled={!canMigrate || status === 'running' || status === 'success'}
+                                className="ml-4 px-4 py-2 bg-blue-600 dark:bg-blue-500 text-white rounded hover:bg-blue-700 dark:hover:bg-blue-600 disabled:bg-gray-400 disabled:cursor-not-allowed flex items-center gap-2 shrink-0"
+                                title={!canMigrate ? 'Read-only API token (PVEAuditor) - Cannot perform migrations' : ''}
                               >
-                                {status === 'running' ? (
+                                {!canMigrate ? (
+                                  <>
+                                    <Lock size={16} />
+                                    Read-Only
+                                  </>
+                                ) : status === 'running' ? (
                                   <>
                                     <RefreshCw size={16} className="animate-spin" />
                                     Starting...
@@ -2270,10 +2321,16 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                           setMigrationStatus(prev => ({ ...prev, [aiKey]: 'failed' }));
                                         });
                                       }}
-                                      disabled={status === 'running' || status === 'success'}
-                                      className="px-4 py-2 bg-purple-600 dark:bg-purple-500 text-white rounded hover:bg-purple-700 dark:hover:bg-purple-600 disabled:bg-gray-400 flex items-center gap-2 shrink-0"
+                                      disabled={!canMigrate || status === 'running' || status === 'success'}
+                                      className="px-4 py-2 bg-purple-600 dark:bg-purple-500 text-white rounded hover:bg-purple-700 dark:hover:bg-purple-600 disabled:bg-gray-400 disabled:cursor-not-allowed flex items-center gap-2 shrink-0"
+                                      title={!canMigrate ? 'Read-only API token (PVEAuditor) - Cannot perform migrations' : ''}
                                     >
-                                      {status === 'running' ? (
+                                      {!canMigrate ? (
+                                        <>
+                                          <Lock size={16} />
+                                          Read-Only
+                                        </>
+                                      ) : status === 'running' ? (
                                         <>
                                           <RefreshCw size={16} className="animate-spin" />
                                           Starting...
@@ -2550,6 +2607,74 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                         </div>
                       </div>
                     )}
+                  </div>
+                </div>
+              </div>
+            )}
+
+            {/* Migration Dialog Modal */}
+            {showMigrationDialog && selectedGuest && canMigrate && (
+              <div className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" onClick={() => setShowMigrationDialog(false)}>
+                <div className="bg-white dark:bg-gray-800 rounded-lg shadow-xl p-6 max-w-md w-full mx-4" onClick={(e) => e.stopPropagation()}>
+                  <h2 className="text-xl font-bold mb-4 text-gray-900 dark:text-white">Migrate Guest</h2>
+
+                  <div className="mb-4 space-y-2">
+                    <div className="text-sm text-gray-600 dark:text-gray-400">
+                      <strong>Guest:</strong> {selectedGuest.name || `Guest ${selectedGuest.vmid}`} ({selectedGuest.vmid})
+                    </div>
+                    <div className="text-sm text-gray-600 dark:text-gray-400">
+                      <strong>Type:</strong> {((selectedGuest.type || '').toUpperCase() === 'VM' || (selectedGuest.type || '').toUpperCase() === 'QEMU') ? 'VM' : 'Container'}
+                    </div>
+                    <div className="text-sm text-gray-600 dark:text-gray-400">
+                      <strong>Current Node:</strong> {selectedGuest.currentNode}
+                    </div>
+                  </div>
+
+                  <div className="mb-4">
+                    <label className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">
+                      Target Node
+                    </label>
+                    <select
+                      value={migrationTarget}
+                      onChange={(e) => setMigrationTarget(e.target.value)}
+                      className="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
+                    >
+                      <option value="">Select target node...</option>
+                      {data && data.nodes && Object.values(data.nodes)
+                        .filter(node => node.name !== selectedGuest.currentNode && node.status === 'online')
+                        .map(node => (
+                          <option key={node.name} value={node.name}>
+                            {node.name}
+                          </option>
+                        ))}
+                    </select>
+                  </div>
+
+                  <div className="flex justify-end gap-3">
+                    <button
+                      onClick={() => setShowMigrationDialog(false)}
+                      className="px-4 py-2 border border-gray-300 dark:border-gray-600 text-gray-700 dark:text-gray-300 rounded hover:bg-gray-100 dark:hover:bg-gray-700"
+                    >
+                      Cancel
+                    </button>
+                    <button
+                      onClick={() => {
+                        if (migrationTarget) {
+                          executeMigration({
+                            vmid: selectedGuest.vmid,
+                            source_node: selectedGuest.currentNode,
+                            target_node: migrationTarget,
+                            type: selectedGuest.type,
+                            name: selectedGuest.name
+                          });
+                          setShowMigrationDialog(false);
+                        }
+                      }}
+                      disabled={!migrationTarget}
+                      className="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 disabled:bg-gray-400 disabled:cursor-not-allowed"
+                    >
+                      Migrate
+                    </button>
                   </div>
                 </div>
               </div>
